WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
161596
Fix ENABLE(GAMEPAD) build errors on non-Cocoa platforms
https://bugs.webkit.org/show_bug.cgi?id=161596
Summary
Fix ENABLE(GAMEPAD) build errors on non-Cocoa platforms
Zan Dobersek
Reported
2016-09-05 00:03:14 PDT
Fix ENABLE(GAMEPAD) build errors on non-Cocoa platforms
Attachments
Patch
(3.98 KB, patch)
2016-09-05 00:06 PDT
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zan Dobersek
Comment 1
2016-09-05 00:06:19 PDT
Created
attachment 287934
[details]
Patch
Zan Dobersek
Comment 2
2016-09-05 22:59:15 PDT
Comment on
attachment 287934
[details]
Patch Clearing flags on attachment: 287934 Committed
r205470
: <
http://trac.webkit.org/changeset/205470
>
Zan Dobersek
Comment 3
2016-09-05 22:59:22 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug